<resources>
    <string name="app_name">GeradorBoletos</string>
    <string name="para_quem">Para quem?</string>
    <string name="pessoa_fisica">Pessoa Física</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="nome_exemplo">Ex.: João Paulo Oliveira</string>
    <string name="pessoa_juridica">Pessoa Jurídica</string>
    <string name="cpf">CPF</string>
    <string name="ex_cpf">Ex. : 000.000.000-00</string>
    <string name="razao_social">Razão Social</string>
    <string name="cnpj">CNPJ</string>
    <string name="ex_cnpj">Ex.: 00.000.000/0000-00</string>
    <string name="celular">Celular</string>
    <string name="ex_telefone">Ex.: (00) 9 0000-0000</string>
    <string name="email">Email</string>
    <string name="texto_preencher_email">Ao preencher o e-mail o boleto será encaminhado automaticamente para o cliente</string>
    <string name="exibir_campos">Exibir campos adicionais</string>
    <string name="endereco">Endereço (Logradouro/Rua/Avenida)</string>
    <string name="number">Número</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="ex_cep">Ex.: 00000-000</string>
    <string name="voltar">Voltar</string>
    <string name="avancar">Avançar</string>
    <string name="o_que_cobrar">O que você deseja cobrar?</string>
    <string name="nao_ha_produtos">Ainda não há produtos ou serviços a serem cobrados.</string>
    <string name="adicionar_item">Adicionar Item</string>
    <string name="nome">Nome</string>
    <string name="valor_unitario">Valor unitário</string>
    <string name="quantidade">Quantidade</string>
    <string name="add_item">Adicionar um item</string>
    <string name="consultar_item">Consultar Item</string>
    <string name="descricao">Descrição:</string>
    <string name="valor">Valor:</string>
    <string name="quantidade_value">Quantidade:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="defina_o_vencimento">Defina o vencimento</string>
    <string name="valor_total_da_cobranca">Valor Total da cobrança:</string>
    <string name="emissao_boletos">Emissão de Boletos</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionar">Adicionar</string>
    <string name="atualizar_item">Atualizar um item</string>
    <string name="atualizar">Atualizar</string>
    <string name="deseja_remover_o_item">Deseja remover o item</string>
    <string name="remover">Remover</string>
    <string name="cobranca_emitida_com_sucesso">Cobrança emitida com sucesso!</string>
    <string name="data_de_vencimento">DATA DE VENCIMENTO</string>
    <string name="valor_da_cobranca">VALOR DA COBRANÇA</string>
    <string name="copiar_codigo">Copiar código</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="ver_boleto">Ver Boleto</string>
    <string name="falha_na_emissao_da_cobranca">Falha na emissão da cobrança.</string>
    <string name="codigo_de_barras">CÓDIGO DE BARRAS</string>
    <string name="concluir">Concluir</string>
    <string name="pesquise_por_pessoa">Pesquise por pessoa</string>
    <string name="pesquise_por_item">Pesquise por pessoa</string>
    <string name="cidade">Cidade</string>
    <string name="exibir_campos_adicionais">Exibir campos adicionais</string>
    <string name="desconto">Desconto</string>
</resources>