<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.geradorboletos.ui.add_items.AddItemsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/form_item_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/form_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/form_item_text_name"
            app:layout_constraintTop_toBottomOf="@id/form_item_text_name"
            android:text="@={viewModel.itemBinding.name}"/>

        <TextView
            android:id="@+id/form_item_text_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/valor_unitario"
            app:layout_constraintStart_toStartOf="@id/form_item_name"
            app:layout_constraintTop_toBottomOf="@id/form_item_name" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/form_item_text_qtd"
            app:layout_constraintStart_toStartOf="@id/form_item_text_value"
            app:layout_constraintTop_toBottomOf="@id/form_item_text_value"
            android:text="@={viewModel.itemBinding.value}"/>

        <TextView
            android:id="@+id/form_item_text_qtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade"
            app:layout_constraintEnd_toEndOf="@id/form_item_name"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toEndOf="@id/form_item_text_value"
            app:layout_constraintTop_toTopOf="@id/form_item_text_value" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/form_item_name"
            app:layout_constraintStart_toStartOf="@id/form_item_text_qtd"
            app:layout_constraintTop_toBottomOf="@id/form_item_text_qtd"
            android:text="@={viewModel.itemBinding.amount}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>